# example-rust-api

./: .env  Cargo.toml  README.md  docker-compose.yaml
api/: Cargo.toml
api/src/: error_response.rs  handlers.rs  main.rs  server.rs  state.rs
database/: Cargo.toml
database/src/: db_error.rs  lib.rs  migration.rs  postgres.rs
migrations/: V1__initial.sql
models/: Cargo.toml
models/src/: lib.rs  pet.rs  repository.rs
