[package]
name = "example-rust-api"
version = "0.1.0"
authors = ["matthewcobbing <matthewc@nandos.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
sqlx = { version = "0.3.5", features = [ "postgres" ] }
dotenv = "0.15.0"
tide = "0.8.0"
async-std = { version = "1.5.0", features = ["attributes"] }
refinery = { version = "0.2.1", features = ["postgres"]}
postgres = "0.17.3"