[package]
name = "example-rust-api"
version = "0.1.0"
authors = ["matthewcobbing <matthewc@nandos.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }
database = { path = "../database" }
dotenv = "0.15.0"
tide = "0.8.0"
async-std = { version = "1.5.0", features = ["attributes"] }
refinery = { version = "0.2.1", features = ["postgres"]}
postgres = "0.17.3"
env_logger = "0.7.1"
femme = "1.3.0"
log = "0.4.8"
serde = "1.0.110"
serde_derive = "1.0.110"
mockall = "0.7.1"
async-trait = "0.1.36"
http-service-mock = "0.5.0"
http-types = "1.3.1"
serde_json = "1.0.55"