[package]
name = "models"
version = "0.1.0"
authors = ["matthewcobbing <matthewc@nandos.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_derive = "1.0.110"
async-trait = "0.1.36"
sqlx = { version = "0.3.5", features = [ "postgres" ] }
